hard-gists/5420652/run.log
=== Docker Run Log for 5420652 ===
Started at: Mi 29. Okt 15:41:11 CET 2025

[2025-10-29 15:41:12] START: Running container for 5420652
[2025-10-29 15:41:12] SUCCESS: Container 8d1a27d7f252c5ed2eb2b5ba982277d742f22d4ee4ba520be493ce4ab8452b96 started for 5420652
=== Container logs for 5420652 ===
  File "/snippet.py", line 61
    except Exception, e:
           ^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 5420652 ===
[2025-10-29 15:41:14] INFO: Container 8d1a27d7f252c5ed2eb2b5ba982277d742f22d4ee4ba520be493ce4ab8452b96 has stopped
